<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sositem1name"
            android:id="@+id/textView17"
            android:background="#ffffffff"
            android:textStyle="bold"
            android:gravity="center" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sositem1number"
            android:id="@+id/button2"
            android:textSize="120sp"
            android:background="#ffffffff" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sositem2name"
                android:id="@+id/textView18"
                android:gravity="center"
                android:background="#ffff0400" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sositem2number"
                android:id="@+id/button3"
                android:background="#ffff0400"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sositem3name"
                android:id="@+id/textView20"
                android:background="#ffffffff"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sositem3number"
                android:id="@+id/button4"
                android:background="#ffffffff"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.33">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/sositem4name"
                android:id="@+id/textView21"
                android:background="#900062fd"
                android:gravity="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/sositem4number"
                android:id="@+id/button5"
                android:background="#900062FD"
                android:textSize="50sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>