<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/chooseNumberSymbol"
            android:id="@+id/textViewDialogSettings"
            android:padding="15dp"
            android:gravity="center"
            android:textSize="30dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numberSymbolPlus"
            android:id="@+id/buttonNumberPlus"
            android:padding="15dp"
            android:onClick="clickOnButtonNumberPlus"
            android:textSize="60dp"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numberSymbolAsterisk"
            android:id="@+id/buttonNumberAsterisk"
            android:padding="15dp"
            android:onClick="clickOnButtonNumberAsterisk"
            android:textSize="60dp"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numberSymbolDagger"
            android:id="@+id/buttonNumberDagger"
            android:onClick="onClickButtonBumberDagger"
            android:textSize="60dp"
            android:padding="15dp"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonNumberCancel"
            android:onClick="onClickButtonNumberCancel"
            android:textSize="30dp"
            android:padding="15dp"
            android:gravity="center"/>
    </LinearLayout>

</LinearLayout>